--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    min-height: 100vh;
 
 }
 
@@ -9,9 +10,17 @@ body {
 }
 
 .headerlogo {
-    font-weight: 300;
+    font-weight: bold;
+    display: flex;
     color: #F9FAF8;
+    padding: 20px 150px;
     
+}
+
+.headerlinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 ul {
