--- a/style1.css
+++ b/style1.css
@@ -6,20 +6,29 @@ body {
 
 .section-one {
     background: #1F2937;
-    display: flex;
     min-height: 30vh; /*This makes x% of the entire page filled with the background colour - to be adjusted later*/ 
+    /*I've removed display:flex; here which allows the header-logo-line to move as needed. */
+
 }
 
 .header-logo-line {
-   
+   display: flex;
+   justify-content: space-between;
+
 }
 
 .header-logo {
     color:#f9faf8;
+    display: flex;
+    align-items: center;
+    padding: 10px 150px;
 }
 
 ul {
     list-style-type: none;
+    display: flex;
+    gap: 10px;
+    padding: 10px 150px;
 }
 
 a {
