--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
     /*min-height: 100vh; add this later?*/
     margin: 0;
 
@@ -22,6 +23,8 @@ body {
     display: flex;
     align-items: center;
     padding: 10px 150px;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 ul {
@@ -33,5 +36,6 @@ ul {
 
 a {
     text-decoration: none;
-    color: #f9faf8;
+    color: #E5E7EB;
+    font-size: 18px;
 }
