--- a/style1.css
+++ b/style1.css
@@ -39,3 +39,37 @@ a {
     color: #E5E7EB;
     font-size: 18px;
 }
+
+.header-main-body {
+
+}
+
+.header-main-logo {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+    
+    
+}
+
+.header-main-text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.first-button {
+
+}
+
+.header-placeholder-image {
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 50px 100px;
+    width: 300px;
+    border: 1px solid;
+}
+
+
