--- a/style1.css
+++ b/style1.css
@@ -47,9 +47,7 @@ a {
 
 }
 
-.header-main-left {
-   
-}
+
 
 .header-main-logo {
     font-size: 48px;
@@ -98,7 +96,8 @@ Also added flex and flex basis to control the shrinking and growing of the image
     flex: 1;
     flex-basis: 500px;
     background-color: grey ;
-
 }
 
-
+.section-two-container {
+    min-height: 30vh;
+}
