--- a/style1.css
+++ b/style1.css
@@ -114,6 +114,7 @@ Also added flex and flex basis to control the shrinking and growing of the image
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
+    padding: 50px;
 }
 
 
@@ -135,18 +136,23 @@ Also added flex and flex basis to control the shrinking and growing of the image
     display: flex;   
     width: 150px;
     height: 150px;
-    border: 1px solid;
+    border: 4px solid;
+    border-color: #3882f6;
+    border-radius: 10px;
 }
 
 .image-text-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 40px;
+    gap: 60px;
 }
 
 .image-text {
     display: flex;
     width: 150px;
-
+    text-align: center;
+    padding-top: 5px;
+    color: grey;
+    font-size: 17px;
 }
