Added Copyright footer. Completed majority of end goal but to finalise and clean up code.

--- a/style1.css
+++ b/style1.css
@@ -245,3 +245,12 @@ Also added flex and flex basis to control the shrinking and growing of the image
     color: #f9faf8;
 }
 
+.copyright-container {
+    min-height: 6vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #f9faf8;
+}
+
